# docky

./: .bzrignore  .editorconfig  .gitignore  AUTHORS  COPYRIGHT  Docky-2.sln  Makefile.am  NEWS  README.mkd  autogen.sh  build.sh  configure.ac  run.sh
Docky.DBus/: Docky.DBus.csproj  (+1 more)
StandardPlugins/: Makefile.am
StandardPlugins/BatteryMonitor/: BatteryMonitor.csproj  Makefile.am
StandardPlugins/BatteryMonitor/src/: BatteryMonitorAbstractItem.cs
StandardPlugins/Bookmarks/: Bookmarks.csproj
StandardPlugins/CPUMonitor/: CPUMonitor.csproj
StandardPlugins/Clippy/: Clippy.csproj  Makefile.am
StandardPlugins/Clippy/src/: ClippyItem.cs
StandardPlugins/Clock/: Clock.csproj
StandardPlugins/Clock/src/: ClockDockItem.cs
StandardPlugins/Desktop/: Desktop.csproj
StandardPlugins/GMail/: GMail.csproj
StandardPlugins/GMail/gtk-gui/: gui.stetic
StandardPlugins/GMail/src/: GMailAtom.cs
StandardPlugins/HelloWorld/: Makefile.am
StandardPlugins/HelloWorld/src/: HelloWorldItemProvider.cs
StandardPlugins/Mounter/: Mounter.csproj
StandardPlugins/NPR/: NPR.csproj
StandardPlugins/NPR/gtk-gui/: NPR.StationSearchWidget.cs  gui.stetic
StandardPlugins/NetworkManager/: Makefile.am  NetworkManager.csproj
StandardPlugins/NetworkMonitor/: NetworkMonitor.csproj
StandardPlugins/RecentDocuments/: RecentDocuments.csproj
StandardPlugins/SessionManager/: Makefile.am  SessionManager.csproj
StandardPlugins/Timer/: Timer.csproj
StandardPlugins/Trash/: Trash.csproj
StandardPlugins/Weather/: Weather.csproj
StandardPlugins/WorkspaceSwitcher/: WorkspaceSwitcher.csproj
(+104 files in other folders)
