SUBDIRS = \
	BatteryMonitor \
	Bookmarks \
	Clippy \
	Clock \
	Desktop \
	CPUMonitor \
	GMail \
	Mounter \
	NetworkManager \
	NetworkMonitor \
	NPR \
	RecentDocuments \
	SessionManager \
	Timer \
	Trash \
	Weather \
	WorkspaceSwitcher \
	HelloWorld

DIST_SUBDIRS = \
	BatteryMonitor \
	Bookmarks \
	Clippy \
	Clock \
	Desktop \
	CPUMonitor \
	GMail \
	Mounter \
	NetworkManager \
	NetworkMonitor \
	NPR \
	RecentDocuments \
	SessionManager \
	Timer \
	Trash \
	Weather \
	WorkspaceSwitcher \
	HelloWorld
